--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   chewie: ^1.7.4
   video_player: ^2.2.17
   youtube_player_flutter: ^8.1.2
+  youtube_player_iframe: ^4.0.4
 
 dev_dependencies:
   flutter_native_splash: ^2.3.6
